# SimpleSaferServer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CNAME  LICENSE  Procfile  README.md  ROADMAP.md  app.py  backup_drive_setup.py  backup_drive_unmount.py  backup_to_mega.py  check_ci.sh  check_ci_docker.sh  check_security.sh  config_manager.py  dashboard_messages.py  drive_health.py  index.html  install.sh  install_dev.sh  legacy_migration.py  logs.txt  nixpacks.toml  pyproject.toml  pyrightconfig.json  railway.json  railway.toml  requirements-dev.txt  requirements-legacy-py37.txt  requirements.txt  reset_fake_mode.sh  run_fake.sh  runtime.py  setup.sh  setup_wizard.py  simple_safer_server_web.service  smb_manager.py  system_updates.py  system_utils.py  (+4 more)
.ocr/: cli-config.json  reviewers-meta.json
docs/: access.md  alerts.md  api_responses.md  architecture.md  cloud_backup.md  dashboard.md  dashboard_interface.md  ddns.md  design_qa.md  development.md  drive_health.md  fake_mode.md  install.md  internal_ui_patterns.md  login.md  manual_install.md  network_file_sharing.md  prd_disable_scheduled_task_schedules.md  railway.md  setup.md  storage.md  system_updates.md  task_detail.md  uninstall.md  users.md
harddrive_model/: optimal_threshold_xgb.pkl  xgb_model.json
notes/: 0001-monolith-to-package-refactor.md  0002-system-command-adapters.md  0003-pr-ci-review-stabilization.md  0004-legacy-artifact-cleanup.md  0005-pr-review-feedback-hardening.md  0006-review-feedback-verification.md  0007-backup-share-rollback-snapshot.md  0008-python-security-baseline.md  0009-review-feedback-hardening.md  0010-review-feedback-runtime-hardening.md  0011-coderabbit-review-hardening.md  0012-livepatch-uninstall-warning.md  0013-installer-os-preflight.md  0014-coderabbit-review-loop.md  0015-python-accessor-style.md  0016-api-response-contract-refactor.md  README.md  (+18 more)
(+209 files in other folders)
