[project]
name = "simple-safer-server"
# Required by Python project metadata only. The app shows Git commits as its version.
version = "0"
description = "Local admin management UI for SimpleSaferServer."
requires-python = ">=3.14,<3.15"
dependencies = [
  "Flask>=3.1",
  "cryptography>=46",
  "gunicorn>=23",
  "psutil>=7",
]

[dependency-groups]
dev = [
  "bandit[toml]>=1.9",
  "pip-audit>=2.10",
  "pre-commit>=3.5",
  "pytest>=9",
  "pytest-xdist>=3.8",
  "ruff>=0.15",
  "shellcheck-py>=0.11.0.1",
  "shfmt-py>=4.0.0",
  "ty>=0.0.44",
]

[tool.uv]
package = false

[tool.ty.src]
# Tests use dynamic module monkeypatching that is useful at runtime but noisy for
# ty today. Keep the fast type gate focused on shipped Python code and scripts.
include = ["simple_safer_server", "scripts"]

[tool.ruff]
target-version = "py314"
line-length = 100
extend-exclude = [
  ".dev-data",
  ".venv",
  "third_party",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "UP",
  "B",
  "SIM",
  "C4",
  "PIE",
  "RUF",
]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
# Deeply nested patch contexts in tests often read more clearly than wide
# multi-context `with` statements, especially when only one mock is asserted.
"tests/*.py" = ["SIM117"]

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.bandit]
exclude_dirs = [
  ".venv",
  ".dev-data",
  "third_party",
  "tests",
]
skips = [
  "B104",
  "B105",
  "B112",
  "B310",
  # SimpleSaferServer is a local admin tool that intentionally shells out to
  # Debian system utilities. Command allowlisting belongs in adapter refactors.
  "B404",
  "B603",
  "B607",
]
